ref: restructure request dto
